--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMARErA2bLe/nD6rYpM1VdS1JkFfvOe5ofKx9YP"
+  crossorigin="anonymous"
+/>
+
     <title>React App</title>
   </head>
   <body>
