--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   crossorigin="anonymous"
 />
 
-    <title>React App</title>
+    <title>Task Management</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
